tdf#155000 - A11Y - Add warning message if content control in header/footer

Add warning message if content controls are in the header or footer.

Change-Id: Ie2a0a8aa1bfaf629f8e17828f2f99e590ea4e3af
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154715
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>